--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,6 +19,14 @@ jobs:
           go-version: 1.18
       - uses: go-semantic-release/action@v1
         with:
-          hooks: goreleaser
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+      - run: git fetch --all
+      - uses: docker/login-action@v1
+        with:
+          username: ${{ env.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - uses: goreleaser/goreleaser-action@v2
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          args: release --rm-dist
