--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -27,7 +27,7 @@ dockers:
     - "tlyng/{{ .ProjectName }}:{{ .Major }}"
     - "tlyng/{{ .ProjectName }}:{{ .Major }}.{{ .Minor }}"
     - "tlyng/{{ .ProjectName }}:latest"
-    dockerfile: Dockerfile
+    dockerfile: Dockerfile.release
     build_flag_templates:
       - --label=org.opencontainers.image.title={{ .ProjectName }}
       - --label=org.opencontainers.image.description={{ .ProjectName }}
